--- a/MakeFile/Makefile
+++ b/MakeFile/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 OPCOES_COMPILADOR=-I. -lglut -lGLU -lGLEW -lGL -lSOIL -lm -lSDL -lSDL_mixer 
 TODOS_ARQUIVOS_PONTOH =
-TODOS_ARQUIVOS_OBJ = main.o
+TODOS_ARQUIVOS_OBJ = main.o inicializa.o input.o desenhaCena.o glm.o glmimg.o glm_util.o
 %.o: ../src/%.c $(TODOS_ARQUIVOS_PONTOH)
 		$(CC) -o $@ -c $< $(OPCOES_COMPILADOR)
 
